# ec2-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  example_config.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
benches/: ec2_parsing.rs  role_assuming.rs
src/: cache.rs  config.rs  ec2_utils.rs  errors.rs  main.rs  provide_shallow_credentials.rs  role_assumer.rs
