[package]
name = "ec2-rs"
version = "0.2.0"
authors = [
  "Eric Coan <ecoan@instructure.com>",
  "Instructure Operations <ops@instructure.com>"
]

[dependencies]
error-chain = "0.11"
chrono = "0.4"
concurrent-hashmap = { version = "0.2", default-features = false }
fnv = "1"
lazy_static = "0.2"
openssl-probe = "0.1"
rayon = "0.8"
regex = "0.2"
rusoto_core = "0.28"
rusoto_ec2 = "0.28"
rusoto_sts = "0.28"
shellexpand = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
